[project]
name = "acme-portal"
version = "0.1.0"
description = "Minimal Flask login demo app (local security-demo target)"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0",
]

[project.scripts]
acme-portal = "app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["app.py", "templates"]
